fix: scrollbar width/heights 12px

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -75,7 +75,9 @@ select {
 /* ------------------------ scrollbar ------------------------- */
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 12px;
+  --size: 12px;
+  width: var(--size);
+  height: var(--size);
 }
 
 *::-webkit-scrollbar-track {
